# fairy-lab

./: .gitattributes  .gitignore  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  pyproject.toml  run_demo.sh
_legacy/fairy/cli/: preflight.py  run.py
_legacy/fairy/core/services/: validator.py
_legacy/schemas/geo/: rnaseq_minimal.yaml
demos/: scratchrun
demos/bulk_rnaseq_min/: README.md  config.yaml
demos/bulk_rnaseq_min/inputs/: files.tsv  samples.tsv
fairy/cli/: run.py
fairy/core/services/: export_adapter.py
fairy/ui/tabs/: export_validate.py
fairy_skeleton/: cli.py
katas/art-collections/: README.md  run.sh
katas/art-collections/fixtures/: artists.csv  artworks.csv  artworks_joined.csv
katas/art-collections/rules/: tate-art-collections@0.1.0.yaml
scripts/: make_art_collections_fixtures.R  prejoin_art_collections.py  run_demo.sh
tests/export/: test_export_zip.py
tests/golden/: test_demo_loop.py
tests/golden/bad/: samples.tsv
tests/golden/expected/: report_bad.json
tests/golden/fixed/: files.tsv  samples.tsv
